Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28988

Callgrind fails to start: "Error in command line"

XMLWordPrintable

    • macOS
    • db2b09f4e (master)

      I have tried building my project for Mac as 'Profiler' or 'Release with Debug Information' and I have also tried with 'QML debugging and profiling' set to 'Leave at Default' or 'Enable'.

      In all cases, I have built the project and gone to Debug > Callgrind and clicked the Start button within the Callgrind panel. It immediately fails with

      17:46:29: Profiling /Users/me/Code/build-MyApp2021-Qt_6_4_2_for_macOS-Profile/app/MyAppTarget
      17:46:29: valgrind --smc-check=stack --tool=callgrind --callgrind-out-file=/Users/me/Code/build-MyApp2021-Qt_6_4_2_for_macOS-Profile/app/callgrind.out.f105 --dsymutil=yes /Users/me/Code/build-MyApp2021-Qt_6_4_2_for_macOS-Profile/app/MyAppTarget
      17:46:29: Error: "valgrind" could not be started: Error in command line.17:46:29: Analyzing finished.
      17:46:29: Unexpected run control state RunControlState::Stopped when worker CallgrindToolRunner started. 

        For Gerrit Dashboard: QTCREATORBUG-28988
        # Subject Branch Project Status CR V

            hjk hjk
            paulmasri Paul
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes